# wasmedge-wasi-nn

./: wasi-nn.witx
rust/: Cargo.toml  README.md
rust/scripts/: regenerate-bindings-from-witx.sh
rust/src/: error.rs  generated.rs  graph.rs  lib.rs
