[package]
name = "wasmedge-wasi-nn"
version = "0.7.1"
authors = ["The Bytecode Alliance Developers", "WasmEdge Developers"]
description = "High-level Rust bindings for wasi-nn, with LLM extensions."
license = "Apache-2.0"
categories = ["wasm", "computer-vision"]
keywords = ["webassembly", "wasm", "neural-network", "wasi-nn", "LLM"]
repository = "https://github.com/second-state/wasmedge-wasi-nn"
documentation = "https://docs.rs/wasmedge_wasi_nn"
readme = "README.md"
edition = "2018"
publish = true

exclude = ["examples", "scripts", "Cargo.lock"]

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]

[dependencies]
thiserror = "1"

[workspace]
